tests/cases/parser/types/typeof_missing_expr.hash
// run=fail

main := () => {
    if (typeof == str) {
        print("t is a string!");
    };

    typeof
};
